[package]
name = "rs-cbor2img"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 2
codegen-units = 16


[dependencies.png]
version = "0.17.16"
default-features = false
features = [
]
